Hadoop Change Log

Release 0.23.9 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9581. hadoop --config non-existent directory should result in error
    (Ashwin Shankar via jlowe)

Release 0.23.8 - 2013-06-05
  
  INCOMPATIBLE CHANGES
  
  NEW FEATURES
  
  IMPROVEMENTS
  
  OPTIMIZATIONS
 
  BUG FIXES

    HADOOP-9222. Cover package with org.apache.hadoop.io.lz4 unit tests (Vadim 
    Bondarev via jlowe)

    HADOOP-9233. Cover package org.apache.hadoop.io.compress.zlib with unit
    tests (Vadim Bondarev via jlowe)

    HADOOP-9469. mapreduce/yarn source jars not included in dist tarball
    (Robert Parker via tgraves)

    HADOOP-9504. MetricsDynamicMBeanBase has concurrency issues in
    createMBeanInfo (Liang Xie via jlowe)

    HADOOP-9614. smart-test-patch.sh hangs for new version of patch (2.7.1)
    (Ravi Prakash via jeagles)

Release 0.23.7 - 2013-04-18

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-8849. FileUtil#fullyDelete should grant the target directories +rwx
    permissions (Ivan A. Veselovsky via bobby)
 
    HADOOP-9216. CompressionCodecFactory#getCodecClasses should trim the
    result of parsing by Configuration. (Tsuyoshi Ozawa via todd)

    HADOOP-9067. provide test for LocalFileSystem.reportChecksumFailure
    (Ivan A. Veselovsky via bobby)

    HADOOP-9253. Capture ulimit info in the logs at service start time.
    (Arpit Gupta via tgraves)
 
    HADOOP-8075. Lower native-hadoop library log from info to debug.
    (Hızır Sefa İrken via eli)

    HADOOP-9336. Allow UGI of current connection to be queried. (Daryn Sharp
    via kihwal)

    HADOOP-9352. Expose UGI.setLoginUser for tests (daryn)

    HADOOP-9209. Add shell command to dump file checksums (Todd Lipcon via
    jeagles)

    HADOOP-9374. Add tokens from -tokenCacheFile into UGI (daryn)

    HADOOP-7358. Improve log levels when exceptions caught in RPC handler
    (Todd Lipcon via shv)
