@@ -15,6 +15,9 @@ Release 0.23.9 - UNRELEASED
     HADOOP-9581. hadoop --config non-existent directory should result in error
     (Ashwin Shankar via jlowe)
 
+    HADOOP-9582. Non-existent file to "hadoop fs -conf" doesn't throw error
+    (Ashwin Shankar via jlowe)
+    
 Release 0.23.8 - 2013-06-05
   
   INCOMPATIBLE CHANGES
